--- a/index.html
+++ b/index.html
@@ -23,14 +23,8 @@
       border-radius: 12px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
-    header h1 {
-      margin: 10px 0 0;
-      font-size: 32px;
-      font-weight: bold;
-      color: #0f172a;
-    }
     header p {
-      margin: 5px 0 0;
+      margin: 10px 0 0;
       font-size: 16px;
       color: #475569;
     }
@@ -81,26 +75,24 @@
 </head>
 <body>
   <header>
-    <!-- Ganti 'kios-aisyha.png' dengan nama file hasil download -->
-    <img src="kios-aisyha.png" alt="Ilustrasi Kios Aisyha">
-    <h1>Kios Aisyha</h1>
+    <img src="warung.png.png" alt="Ilustrasi Kios Aisyha" width="400">
     <p>Es Segar • Kopi • Pentol Lengkap • Sembako — Siap Antar 🚚</p>
   </header>
 
   <main>
     <div class="card">
-      <h2>Minuman Segar</h2>
-      <p>🧊 Es Teh, Es Jeruk, Es Susu, dll<br>☕ Kopi Susu, Kopi Hitam</p>
+      <h2>Minuman Segar 🧊</h2>
+      <p>•Es Kopi<br>•Es Susu<br>•Es Nutrisari<br>•Pop Ice segala macam rasa</p>
     </div>
 
     <div class="card">
-      <h2>Pentol Pilihan</h2>
-      <p>Dengan topping: keju, jamur, daging, telur puyuh, ikan, ayam, tahu.</p>
+      <h2>Pentol Pilihan 🍡</h2>
+      <p>•Pentol Keju<br>•Pentol Jamur<br>•Pentol Daging<br>•Pentol Telur Puyuh<br>•Pentol Ikan<br>•Pentol Ayam<br>•Tahu<br>Diolah dengan bumbu spesial dijamin nagih lumer dimulut</p>
     </div>
 
     <div class="card">
-      <h2>Sembako Lengkap</h2>
-      <p>Beras, minyak, gula, telur, mie instan, bumbu dapur, sabun, detergen, dan lain-lain.</p>
+      <h2>Sembako Lengkap 🍚</h2>
+      <p>•Beras<br>•Minyak<br>•Gula<br>•Telur<br>•Mie Instan<br>•Bumbu Dapur<br>•Sabun<br>•Detergen<br>•Dan lain-lain.</p>
     </div>
   </main>
 
@@ -108,7 +100,6 @@
     <p>Hubungi kami: <a href="tel:+6282154306904">0821-5430-6904</a></p>
     <a class="wa-btn" href="https://wa.me/6282154306904?text=Halo%20Kios%20Aisyha%2C%20saya%20mau%20pesan" target="_blank">💬 Chat via WhatsApp</a>
 
-    <!-- QR Code WhatsApp -->
     <div class="qr-box">
       <p>Scan untuk pesan via WhatsApp:</p>
       <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://wa.me/6282154306904" alt="QR WhatsApp Kios Aisyha">
